# Demo-Acbf2312

./: README.md  Record.md  readMe.md
mpc_tracker/simple_mpc/: CMakeLists.txt  package.xml  readme.md
mpc_tracker/simple_mpc/config/: param_ackman.yaml  param_differential.yaml  param_quadruped.yaml
mpc_tracker/simple_mpc/include/mpc_core/: mpc_ackman.hpp  mpc_base.h  mpc_differential.hpp  mpc_quadruped.hpp  mpc_tracker.h
mpc_tracker/simple_mpc/launch/: mpc_ackman.launch  mpc_differential.launch  mpc_quadruped.launch
mpc_tracker/simple_mpc/src/: mpc_node.cpp  mpc_tracker.cpp
perception/dynamic_perception/: CMakeLists.txt  package.xml
perception/dynamic_perception/cfg/: params_lshape.yaml  ri_dbscan.cfg  ri_dbscan.rviz
perception/dynamic_perception/include/dynamic_perception/: cluster_track.hpp  ground_truth.hpp  lshape_estimator.hpp  obstacle_prediction.h  panther_types.hpp  ri_dbscan.h
perception/dynamic_perception/launch/: obs_manager.launch  perception.launch  play_bag.launch  run_all.launch
perception/dynamic_perception/matlab/casadi_generated_files/: fit_yaw.casadi  get_mean_variance_pred_10.casadi  get_mean_variance_pred_11.casadi  get_mean_variance_pred_12.casadi  get_mean_variance_pred_13.casadi  get_mean_variance_pred_14.casadi  get_mean_variance_pred_15.casadi  get_mean_variance_pred_16.casadi  get_mean_variance_pred_17.casadi  get_mean_variance_pred_18.casadi  get_mean_variance_pred_19.casadi  get_mean_variance_pred_20.casadi  get_mean_variance_pred_21.casadi  get_mean_variance_pred_22.casadi  get_mean_variance_pred_23.casadi  get_mean_variance_pred_24.casadi  get_mean_variance_pred_25.casadi  get_mean_variance_pred_26.casadi  get_mean_variance_pred_27.casadi  get_mean_variance_pred_28.casadi  get_mean_variance_pred_29.casadi  get_mean_variance_pred_30.casadi  get_mean_variance_pred_31.casadi  get_mean_variance_pred_32.casadi  get_mean_variance_pred_33.casadi  get_mean_variance_pred_34.casadi  get_mean_variance_pred_35.casadi  get_mean_variance_pred_36.casadi  get_mean_variance_pred_37.casadi  get_mean_variance_pred_38.casadi  get_mean_variance_pred_39.casadi  get_mean_variance_pred_4.casadi  get_mean_variance_pred_40.casadi  get_mean_variance_pred_5.casadi  get_mean_variance_pred_6.casadi  get_mean_variance_pred_7.casadi  get_mean_variance_pred_8.casadi  get_mean_variance_pred_9.casadi
perception/dynamic_perception/msg/: CloudCluster.msg  DetectedObject.msg
perception/dynamic_perception/src/: Hungarian.cpp  lshape_estimator.cpp  lshape_estimator_node.cpp  obs_manager_node.cpp  obstacle_prediction.cpp  obstacle_prediction_node.cpp  ri_dbscan.cpp
perception/mapping/: CMakeLists.txt
perception/mapping/include/: localMap_adaptor.h  mapping.h  raycast.h
perception/mapping/launch/: test_map.launch
perception/mapping/src/: localMap_adaptor.cpp  localMap_node.cpp  mapping.cpp  raycast.cpp
planner/mpc_dcbf/: CMakeLists.txt  package.xml
planner/mpc_dcbf/include/: mpc_cbf.h
planner/mpc_dcbf/launch/: mpc_adsm.launch  mpc_adsm_c.launch  mpc_dcbf.launch  mpc_dcbf_soft.launch
planner/mpc_dcbf/scripts/: controller.py  mpc_acbf.py  mpc_dcbf_soft.py
planner/mpc_dcbf/src/: global_path_by_rviz.cpp  global_path_publisher.cpp  mpc_cbf.cpp  mpc_horizen_node.cpp  mpc_node.cpp
planner/vomp_planner/traj_planner/: CMakeLists.txt  package.xml
planner/vomp_planner/traj_planner/example/: dynamic_planner_node.cpp  globalFsm_by_adsm.cpp  (+2 more)
simulation_tools/dynamic_simulator/: CMakeLists.txt  package.xml
simulation_tools/dynamic_simulator/config/: dynamic_simulator.rviz  dynamic_world.world  obstacles_param.yaml  obstacles_param_gazebo.yaml
simulation_tools/dynamic_simulator/launch/: spawn_dynamic_obstacle.launch
simulation_tools/dynamic_simulator/msg/: DynTraj.msg
simulation_tools/dynamic_simulator/scripts/: generate_agents.py  generate_agents_fixed_poses.py  generate_agents_fixed_poses_gazebo.py
simulation_tools/laser_simulator/: CMakeLists.txt
simulation_tools/laser_simulator/launch/: laser_sim.launch
simulation_tools/laser_simulator/src/: laser_sim_node.cpp
simulation_tools/quadruped_simulator/champ_base/: CMakeLists.txt
simulation_tools/robot_simulator/: CMakeLists.txt  package.xml
simulation_tools/robot_simulator/launch/: hunter_simulator.xml  scout_simulator.xml  vis_car.launch  vis_hunter_using_odometry.launch  vis_scout_using_odometry.launch
simulation_tools/robot_simulator/param/: vis_car.rviz
simulation_tools/robot_simulator/src/: hunter_simulator.cpp  hunter_visualizer.cpp  scout_simulator.cpp  scout_visualizer.cpp
swarm_test/: CMakeLists.txt  package.xml
swarm_test/config/: acbf_horizen.rviz  acbf_plan.rviz  data_process.rviz  dcbf_plan.rviz  dynamic_plan.rviz  exp_real_bag.rviz  gridmap.rviz  kino_plan.rviz  rviz.rviz  show_all_traj.rviz  show_mpc_traj.rviz  static_plan.rviz  teb_plan.rviz
swarm_test/docs/: data1.csv  data2.csv  data3.csv  data4.csv  data5.csv  data6.csv  data_cp.csv  ploter.py
swarm_test/docs/data0715/: data-s1.csv  data-s2.csv  data-s3.csv  data.csv
swarm_test/docs/data0729/: data.csv  data_copy1.csv  data_copy2.csv
swarm_test/docs/data0807/: data-end.csv  data-front.csv  data.csv  data_backup.txt
swarm_test/docs/mpc_data/: data2.csv  data5.csv
swarm_test/include/: dog_kino_traj.launch
swarm_test/include/obs_manager_for_data_process/: obs_manager.hpp
swarm_test/launch/: acbf0_one_horizen.launch  acbf0_planner.launch  acbf0_tracker.launch  acbf_planning.launch  acbf_planning1.launch  cbf_planning.launch  cbf_soft_planning.launch  data_process.launch  dog_planning.launch  dwa_planning.launch  exp_dynamic_perception.launch  exp_scout_planning.launch  kino_planning.launch  show_all_traj.launch  show_mpc_traj.launch  start_gazebo_env.launch  start_test.launch  static_planning.launch  teb_planning.launch
swarm_test/launch_exp/: exp_acbf_planner.launch  exp_hardware.launch  exp_play_bag.launch  exp_start_test.launch  start_perception.launch
swarm_test/src/: corridor_visualization.cpp  data_processor.cpp  odom_fixed.cpp  odom_traj_visualization.cpp  pointcloud_fixed.cpp  start_trigger.cpp
(+97 files in other folders)
