<?xml version="1.0"?>
<package format="2">
  <name>dynamic_perception</name>
  <version>0.0.0</version>
  <description>The dynamic_perception package</description>
  <maintainer email="pi@todo.todo">pi</maintainer>
  <license>TODO</license>

  <buildtool_depend>autoware_build_flags</buildtool_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>jsk_recognition_msgs</build_depend>
  <build_depend>autoware_msgs</build_depend>
  <!-- <build_depend>obsdet_msgs</build_depend> -->
  <build_depend>panther_msgs</build_depend>
  <build_depend>dynamic_simulator</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_runtime</build_depend>


  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>pcl_ros</build_export_depend>
  <build_export_depend>tf2_ros</build_export_depend>
  <build_export_depend>tf2_geometry_msgs</build_export_depend>
  <build_export_depend>dynamic_reconfigure</build_export_depend>
  <build_export_depend>jsk_recognition_msgs</build_export_depend>
  <build_export_depend>autoware_msgs</build_export_depend>
  <!-- <build_export_depend>obsdet_msgs</build_export_depend> -->
  <build_export_depend>dynamic_simulator</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>message_runtime</build_export_depend>


  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>  
  <exec_depend>dynamic_reconfigure</exec_depend>
  <exec_depend>autoware_msgs</exec_depend>
  <exec_depend>jsk_recognition_msgs</exec_depend>
  <!-- <exec_depend>obsdet_msgs</exec_depend> -->
  <exec_depend>dynamic_simulator</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>

  </export>
</package>
